Revert "1. Add parameterized annotation to support  testing on different screen"
This reverts commit a68993da07ef2aebe3a66660e4c6a6f23b4bedf2.

Reason for revert: A bunch of bugs where [IncludeNone] is being added as a parameterization e.g. https://buganizer.corp.google.com/issues/333527861

Change-Id: I89a10106b275281ef80e927e38844e2f26b8c1e4